<resources>
    <string name="app_name">ST_app</string>
    <string name="homework_01">HomeWork_01</string>
    <string name="homework_02">HomeWork_02</string>
    <string name="homework_03">HomeWork_03</string>
    <string name="homework_04">HomeWork_04</string>
    <string name="homework_05">HomeWork_05</string>
    <string name="homework_06">HomeWork_06</string>
    <string name="homework_07">HomeWork_07</string>
    <string name="homework_08">HomeWork_08</string>
    <string name="homework_09">HomeWork_09</string>
    <string name="homework_10">HomeWork_10</string>
    <string name="homework_11">HomeWork_11</string>

    //hw_01
    <string name="first_text">First text!</string>
    <string name="second_text">Second text!</string>

    //hw_03
    <string name="my_url">https://img5.goodfon.ru/original/800x480/e/fd/zima-ogni-prazdnik-olen-art-novyi-god-sani-santa-klaus-merry.jpg</string>
    <string name="btnShowToast">Show Toast from Gradle</string>
    <string name="btnDownloadImage">Download Image</string>
    <string name="addYourUrl">Add your URl</string>

    //hw_04
    <string name="owl_animation">Owl animation</string>
    <string name="clock">Clock</string>
    <string name="diagram">Diagram</string>

    //hw_05
    <string name="wifi_is_on">WIFI is ON now</string>
    <string name="wifi_is_of">WIFI is OFF now</string>
    <string name="change_state_wifi">change state WIFI</string>

    //hw_06
    <string name="surname">Surname:</string>
    <string name="name">Name:</string>
    <string name="id">Id:</string>
    <string name="btn_add_student">Add student</string>
    <string name="btn_edit_student">EDIT</string>
    <string name="btn_delete_student">delete</string>
    <string name="add_name">Add name</string>
    <string name="add_surname">Add Surname</string>

    //hw_08
    <string name="task_01">Task_01</string>
    <string name="task_02">Task_02</string>
    <string name="plus_1">Plus_1</string>
    <string name="even_numbers">Even numbers</string>

    //hw_10
    <string name="hw_10_text">DI \nKOIN \nDagger2</string>

    //hw_11
    <string name="Abbreviation">AUD</string>
    <string name="rate">Rate</string>
    <string name="scale">Scale</string>
    <string name="date">Date</string>
    <string name="menu_search">Search</string>
</resources>