<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/mainHW1"
        android:layout_width="@dimen/width_btn"
        android:layout_height="wrap_content"
        android:text="@string/homework_01"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/mainHW2"
        android:layout_width="@dimen/width_btn"
        android:layout_height="wrap_content"
        android:text="@string/homework_02"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/mainHW3"
        android:layout_width="@dimen/width_btn"
        android:layout_height="wrap_content"
        android:text="@string/homework_03"
        android:layout_marginTop="16dp"/>
    <Button
        android:id="@+id/mainHW4"
        android:layout_width="@dimen/width_btn"
        android:layout_height="wrap_content"
        android:text="@string/homework_04"
        android:layout_marginTop="16dp"/>
    <Button
        android:id="@+id/mainHW5"
        android:layout_width="@dimen/width_btn"
        android:layout_height="wrap_content"
        android:text="@string/homework_05"
        android:layout_marginTop="16dp"/>
    <Button
        android:id="@+id/mainHW6"
        android:layout_width="@dimen/width_btn"
        android:layout_height="wrap_content"
        android:text="@string/homework_06"
        android:layout_marginTop="16dp"/>
    <Button
        android:id="@+id/mainHW7"
        android:layout_width="@dimen/width_btn"
        android:layout_height="wrap_content"
        android:text="@string/homework_07"
        android:layout_marginTop="16dp"/>
    <Button
        android:id="@+id/mainHW8"
        android:layout_width="@dimen/width_btn"
        android:layout_height="wrap_content"
        android:text="@string/homework_08"
        android:layout_marginTop="16dp"/>
    <Button
        android:id="@+id/mainHW9"
        android:layout_width="@dimen/width_btn"
        android:layout_height="wrap_content"
        android:text="@string/homework_09"
        android:layout_marginTop="16dp"/>
    <Button
        android:id="@+id/mainHW10"
        android:layout_width="@dimen/width_btn"
        android:layout_height="wrap_content"
        android:text="@string/homework_10"
        android:layout_marginTop="16dp"/>

</LinearLayout>