<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".hw_04.TheFourthActivity">

    <Button
        android:id="@+id/btnOwlAnim"
        android:layout_width="@dimen/width_btn"
        android:layout_height="wrap_content"
        android:text="@string/owl_animation"
        android:layout_margin="@dimen/margin_btn"/>
    <Button
        android:id="@+id/btnClock"
        android:layout_width="@dimen/width_btn"
        android:layout_height="wrap_content"
        android:text="@string/clock"
        android:layout_margin="@dimen/margin_btn"/>
    <Button
        android:id="@+id/btnDiagram"
        android:layout_width="@dimen/width_btn"
        android:layout_height="wrap_content"
        android:text="@string/diagram"
        android:layout_margin="@dimen/margin_btn"/>
</LinearLayout>